Fix container margin on small devices

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,12 @@
     }
 }
 
+@media screen and(max-width: 1024px) {
+    .container {
+        margin: 20px;
+    }
+}
+
 .main-wrapper {
     &.dark {
         .navbar {
